--- a/app/src/main/res/layout/frg_register.xml
+++ b/app/src/main/res/layout/frg_register.xml
@@ -64,7 +64,8 @@
             android:ems="10"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
-            android:paddingBottom="15dp" />
+            android:paddingBottom="15dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/frg_register_password_edt"
@@ -77,7 +78,8 @@
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:paddingTop="5dp"
-            android:paddingBottom="15dp" />
+            android:paddingBottom="15dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/frg_register_password_confirm_edt"
@@ -90,7 +92,8 @@
             android:hint="@string/password_confirm_hint"
             android:inputType="textPassword"
             android:paddingTop="5dp"
-            android:paddingBottom="15dp" />
+            android:paddingBottom="15dp"
+            android:textColor="#000000" />
 
     </LinearLayout>
 
